# LU

./: CMakeLists.txt  Gauss_solver.cpp  Gauss_solver.h  Matrix.cpp  Matrix.h  MatrixCaculate.cpp  MatrixCaculate.h  SquareMatrix.cpp  SquareMatrix.h  main.cpp
